--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
   "dependencies": {
     "lodash": "^4.17.21",
     "vue": "^3.4.21",
-    "vue-router": "^4.3.2",
-    "vuetify": "^3.6.0-beta.0.0"
+    "vue-router": "^4.3.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.4",
