--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
   "dependencies": {
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.3",
-    "bootstrap-icons": "^1.11.3",
     "firebase": "^10.12.0",
     "lodash": "^4.17.21",
     "pinia": "^2.1.7",
@@ -18,6 +17,7 @@
     "vue-router": "^4.3.2"
   },
   "devDependencies": {
+    "@types/lodash": "^4.17.4",
     "@vitejs/plugin-vue": "^5.0.4",
     "typescript": "^5.2.2",
     "vite": "^5.2.0",
