--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lodash": "^4.17.21",
     "luxon": "^3.4.4",
     "pinia": "^2.1.7",
+    "uninstall": "^0.0.0",
     "vue": "^3.4.21",
     "vue-router": "^4.3.2"
   },
